--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,12 @@
             <artifactId>swing-forms</artifactId>
             <version>1.9.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>RELEASE</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
