--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,7 @@
                     <checksums>all</checksums>
                     <centralBaseUrl>https://central.sonatype.com</centralBaseUrl>
                     <centralSnapshotsUrl>https://central.sonatype.com/repository/maven-snapshots/</centralSnapshotsUrl>
-                    <skipPublishing>true</skipPublishing>
+                    <skipPublishing>false</skipPublishing>
                 </configuration>
             </plugin>
             <plugin>
@@ -97,13 +97,27 @@
                 </executions>
             </plugin>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>3.4.2</version>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
                 <configuration>
                     <archive>
-                        <manifestFile>src/main/resources/swing-extras/META-INF/MANIFEST.MF</manifestFile>
+                        <manifest>
+                            <mainClass>ca.corbett.extras.demo.DemoAppLauncher</mainClass>
+                        </manifest>
+                        <manifestEntries>
+                            <SplashScreen-Image>swing-extras/images/swing-extras-logo.jpg</SplashScreen-Image>
+                        </manifestEntries>
                     </archive>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
                 </configuration>
             </plugin>
             <plugin>
