Minor formatting changes in .editorconfig

--- a/.editorconfig
+++ b/.editorconfig
@@ -1,9 +1,11 @@
+root = true
+
 [*]
 charset = utf-8
 end_of_line = lf
 indent_size = 4
 indent_style = space
-insert_final_newline = false
+insert_final_newline = true
 max_line_length = 120
 tab_width = 4
 ij_continuation_indent_size = 8
@@ -170,7 +172,6 @@ ij_java_prefer_longer_names = true
 ij_java_prefer_parameters_wrap = false
 ij_java_preserve_module_imports = true
 ij_java_record_components_wrap = normal
-ij_java_repeat_annotations = 
 ij_java_repeat_synchronized = true
 ij_java_replace_instanceof_and_cast = false
 ij_java_replace_null_check = true
