--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>ca.corbett</groupId>
     <artifactId>swing-extras</artifactId>
-    <version>2.7.0</version>
+    <version>2.8.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>swing-extras</name>
@@ -96,7 +96,7 @@
                     <checksums>all</checksums>
                     <centralBaseUrl>https://central.sonatype.com</centralBaseUrl>
                     <centralSnapshotsUrl>https://central.sonatype.com/repository/maven-snapshots/</centralSnapshotsUrl>
-                    <skipPublishing>false</skipPublishing>
+                    <skipPublishing>true</skipPublishing> <!-- TODO set to false before release -->
                 </configuration>
             </plugin>
             <plugin>
